--- a/j2-config-files/R3-config-file.cfg
+++ b/j2-config-files/R3-config-file.cfg
@@ -1,8 +1,8 @@
 hostname R3
 interface loopback150
  description *** Template loopback150 *** 
- ipv4 address 3.3.3.100 255.255.255.255
+ ip address 3.3.3.100 255.255.255.255
 
 interface loopback200
  description *** Template loopback200 *** 
- ipv4 address 3.3.3.200 255.255.255.255
+ ip address 3.3.3.200 255.255.255.255
